--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,6 +19,11 @@
   cursor: pointer;
 }
 
+.popup__button:disabled {
+  background: white; 
+  color: rgba(0, 0, 0, 0.5); 
+  cursor: not-allowed; 
+}
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
